<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back4"
    android:orientation="vertical"
    tools:context=".ui.emprestimo.EmprestimoFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/exemplo_emprestimo"
        android:textColor="@color/cinza_escuro"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/local"
        android:textColor="@color/cinza_escuro"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/Domiciliar"
        android:textColor="@color/cinza_escuro"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="-15dp"
        android:text="@string/D_1"
        android:textColor="@color/cinza_escuro"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="0dp"
        android:text="@string/D_2"
        android:textColor="@color/cinza_escuro"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/O_referencia"
        android:textColor="@color/cinza_escuro"
        android:textSize="18sp" />

</LinearLayout>