<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    android:orientation="vertical"
    tools:context=".ui.carteirinha.CarteirinhaFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/carteira_1"
        android:textColor="@color/cinza_escuro"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/carteira_2"
        android:textColor="@color/cinza_escuro"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/carteira_3"
        android:textColor="@color/cinza_escuro"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/carteira_4"
        android:textColor="@color/cinza_escuro"
        android:textSize="18sp" />

</LinearLayout>

