<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back4"
    android:orientation="vertical"
    tools:context=".ui.reserva.ReservaFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/R_1"
        android:textColor="@color/cinza_escuro"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/R_2"
        android:textColor="@color/cinza_escuro"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:text="@string/R_3"
        android:textColor="@color/cinza_escuro"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/iconeatencao"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/R_4"
        android:textSize="18sp"/>


</LinearLayout>