<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    android:orientation="vertical"
    tools:context=".ui.suporte.SuporteFragment">

    <!-- Unisepe logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:src="@drawable/banner"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Uniteca logo -->
    <ImageView
        android:id="@+id/banner"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/img_logo"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt_fale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/falesuporte"
        android:textColor="@color/cinza_escuro"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txt_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/site"
        android:textColor="@color/cinza_escuro"
        app:layout_constraintTop_toBottomOf="@id/txt_fale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/email"
        android:textColor="@color/cinza_escuro"
        app:layout_constraintTop_toBottomOf="@id/txt_site"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_contato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/contato"
        android:textColor="@color/cinza_escuro"
        app:layout_constraintTop_toBottomOf="@id/txt_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:textSize="20sp" />

</androidx.constraintlayout.widget.ConstraintLayout>
