<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".BibliLogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_marginTop="140dp"
        android:src="@drawable/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/container_caixa"
        style="@style/caixalogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/text_RA"
        style="@style/edit_RA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_ra"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/container_caixa" />

    <EditText
        android:id="@+id/edit_RA"
        style="@style/edit_text"
        android:maxLength="7"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/container_caixa"
        app:layout_constraintEnd_toEndOf="@+id/container_caixa"
        app:layout_constraintTop_toBottomOf="@id/text_RA" />

    <TextView
        android:id="@+id/text_senha"
        style="@style/edit_RA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_senha"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_RA" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/edit_text"
        android:inputType="textPassword"
        android:maxLength="32"
        android:drawableRight="@drawable/icone_olho"
        app:layout_constraintStart_toStartOf="@+id/container_caixa"
        app:layout_constraintEnd_toEndOf="@+id/container_caixa"
        app:layout_constraintTop_toBottomOf="@id/text_senha" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login"
        style="@style/botao"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha" />

</androidx.constraintlayout.widget.ConstraintLayout>